--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
 	<meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1'>
 
 	<!-- This site is optimized with the Yoast SEO plugin v17.2.1 - https://yoast.com/wordpress/plugins/seo/ -->
-	<title>Sugaring NYC - Sugar Hair Removal New York City.</title>
+	<title>Sugaring NYC - Удаление волос сахаром Нью-Йорк.</title>
 	<meta name="description"
 		content="Sugaring nyc specializes on painless hair removal utilizing sugaring techniques from ancient egyptian culture. Sugaring New York City. 100% Natural.">
 	<link rel="canonical" href="index.htm">
@@ -2542,9 +2542,9 @@ Remarketing tags may not be associated with personally identifiable information 
 							<h3 class="widget-title m-secondary-font">1-888-647-8427</h3>
 							<div class="textwidget">
 								<p><span style="font-size: 24px;"><span style="font-size: 25px;">Забронируйте онлайн или
-									Вызов</span></span></p>
+											Вызов</span></span></p>
 								<p><span style="font-size: 24px;"><span style="font-size: 20px;">Подпишитесь на нашу
-									YouTube<br>
+											YouTube<br>
 										</span></span><br>
 									<script src="https://apis.google.com/js/platform.js"></script>
 								</p>
@@ -2774,7 +2774,8 @@ Remarketing tags may not be associated with personally identifiable information 
 
 							<div class="edn-text-content-wrap">
 								<div class="edn_static_text">
-									<div class="edn-text-link">Sugaring NYC теперь действует по франчайзингу! Заинтересованы в открытии магазина
+									<div class="edn-text-link">Sugaring NYC теперь действует по франчайзингу!
+										Заинтересованы в открытии магазина
 										в вашем городе?</div> <span class="edn-call-action-button">
 
 										<span class="edn-ca-custom">
