--- a/locations/index-1.htm
+++ b/locations/index-1.htm
@@ -716,12 +716,12 @@ Remarketing tags may not be associated with personally identifiable information 
 				<!-- HEADER BRANDING : begin -->
 				<div class="header-branding">
 					<a href="index.htm">
-						<img src="wp-content\uploads\2017\03\sugaringNYC_logo.png" width="350"
+						<img src="../wp-content\uploads\2017\03\sugaringNYC_logo.png" width="350"
 							alt="Sugaring NYC Hair Removal &#8211; New York Hair Removal Studio">
 					</a>
 				</div>
 				<p style="text-align: center;"><a href="https://www.sugaringbooking.com/" target="_blank"><img
-							src="wp-content\themes\beautyspot\button.png"></a></p>
+							src="../wp-content\themes\beautyspot\button.png"></a></p>
 				<!-- HEADER BRANDING : end -->
 				<!-- jQuery Conversion Click : begin -->
 				<script type="text/javascript">
