--- a/locations/index.htm
+++ b/locations/index.htm
@@ -714,12 +714,12 @@ Remarketing tags may not be associated with personally identifiable information 
 				<!-- HEADER BRANDING : begin -->
 				<div class="header-branding">
 					<a href="index.htm">
-						<img src="wp-content\uploads\2017\03\sugaringNYC_logo.png" width="350"
+						<img src="../wp-content\uploads\2017\03\sugaringNYC_logo.png" width="350"
 							alt="Sugaring NYC Hair Removal &#8211; New York Hair Removal Studio">
 					</a>
 				</div>
 				<p style="text-align: center;"><a href="https://www.sugaringbooking.com/" target="_blank"><img
-							src="wp-content\themes\beautyspot\button.png"></a></p>
+							src="../wp-content\themes\beautyspot\button.png"></a></p>
 				<!-- HEADER BRANDING : end -->
 				<!-- jQuery Conversion Click : begin -->
 				<script type="text/javascript">
@@ -1713,20 +1713,22 @@ Remarketing tags may not be associated with personally identifiable information 
 											Информация</a><br></span><a style="color: #ffffff;"
 										href="..\collaborations\index.htm">Сотрудничество</a></p>
 								<h3>&nbsp;</h3>
-								<h2><a style="color: #ffffff;" href="https://www.sugaringjobs.com"><strong>Шугаринг Нью-Йорк
-									Вакансии</strong><br></a></h2>
+								<h2><a style="color: #ffffff;" href="https://www.sugaringjobs.com"><strong>Шугаринг
+											Нью-Йорк
+											Вакансии</strong><br></a></h2>
 								<p><span style="color: #ffffff;">Авторские права &nbsp; &copy; 2021 Все права защищены.
-									Sugaring NYC и логотип Sugaring NYC являются зарегистрированными товарными знаками Sugaring USA.
-									ООО</span></p>
+										Sugaring NYC и логотип Sugaring NYC являются зарегистрированными товарными
+										знаками Sugaring USA.
+										ООО</span></p>
 							</div>
 						</div>
 						<div id="text-4" class="widget col-md-6 widget_text">
 							<h3 class="widget-title m-secondary-font">1-888-647-8427</h3>
 							<div class="textwidget">
 								<p><span style="font-size: 24px;"><span style="font-size: 25px;">Забронируйте онлайн или
-									Вызов</span></span></p>
+											Вызов</span></span></p>
 								<p><span style="font-size: 24px;"><span style="font-size: 20px;">Подпишитесь на нашу
-									YouTube<br>
+											YouTube<br>
 										</span></span><br>
 									<script src="https://apis.google.com/js/platform.js"></script>
 								</p>
@@ -1956,7 +1958,8 @@ Remarketing tags may not be associated with personally identifiable information 
 
 							<div class="edn-text-content-wrap">
 								<div class="edn_static_text">
-									<div class="edn-text-link">Sugaring NYC теперь действует по франчайзингу! Заинтересованы в открытии магазина
+									<div class="edn-text-link">Sugaring NYC теперь действует по франчайзингу!
+										Заинтересованы в открытии магазина
 										в вашем городе?</div> <span class="edn-call-action-button">
 
 										<span class="edn-ca-custom">
