--- a/our-story/index.htm
+++ b/our-story/index.htm
@@ -1007,7 +1007,7 @@ Remarketing tags may not be associated with personally identifiable information 
           <div class="header-branding">
             <a href="index.htm">
               <img
-                src="wp-content\uploads\2017\03\sugaringNYC_logo.png"
+                src="../wp-content\uploads\2017\03\sugaringNYC_logo.png"
                 width="350"
                 alt="Sugaring NYC Hair Removal &#8211; New York Hair Removal Studio"
               />
@@ -1015,7 +1015,7 @@ Remarketing tags may not be associated with personally identifiable information 
           </div>
           <p style="text-align: center">
             <a href="https://www.sugaringbooking.com/" target="_blank"
-              ><img src="wp-content\themes\beautyspot\button.png"
+              ><img src="../wp-content\themes\beautyspot\button.png"
             /></a>
           </p>
           <!-- HEADER BRANDING : end -->
@@ -1039,267 +1039,42 @@ Remarketing tags may not be associated with personally identifiable information 
               </button>
 
               <ul id="menu-header-items" class="main-menu menu-items clearfix">
-                <li
-                  id="menu-item-3668"
-                  class="
-                    menu-item menu-item-type-custom menu-item-object-custom
-                  "
-                >
+                <li id="menu-item-3668" class="menu-item menu-item-type-custom menu-item-object-custom">
                   <span><a href="index.htm">Главная</a></span>
                 </li>
-                <li
-                  id="menu-item-3682"
-                  class="
-                    menu-item
-                    menu-item-type-custom
-                    menu-item-object-custom
-                    menu-item-has-children
-                  "
-                >
-                  <span><a>Services</a></span>
-                  <ul class="sub-menu">
-                    <li
-                      id="menu-item-3788"
-                      class="
-                        menu-item
-                        menu-item-type-post_type
-                        menu-item-object-page
-                      "
-                    >
-                      <span
-                        ><a href="brazilian-sugaring\index.htm"
-                          >Бразильский шугаринг</a
-                        ></span
-                      >
-                    </li>
-                    <li
-                      id="menu-item-3691"
-                      class="
-                        menu-item menu-item-type-custom menu-item-object-custom
-                      "
-                    >
-                      <span
-                        ><a href="body-sugaring\index.htm"
-                          >Шугаринг тела</a
-                        ></span
-                      >
-                    </li>
-                    <li
-                      id="menu-item-3694"
-                      class="
-                        menu-item menu-item-type-custom menu-item-object-custom
-                      "
-                    >
-                      <span
-                        ><a href="face-sugaring\index.htm"
-                          >Шугаринг лица</a
-                        ></span
-                      >
-                    </li>
-                    <li
-                      id="menu-item-7213"
-                      class="
-                        menu-item menu-item-type-custom menu-item-object-custom
-                      "
-                    >
-                      <span
-                        ><a href="bikini-facials-nyc\index.htm"
-                          >V-Facials + дополнения</a
-                        ></span
-                      >
-                    </li>
-                    <li
-                      id="menu-item-6597"
-                      class="
-                        menu-item
-                        menu-item-type-post_type
-                        menu-item-object-page
-                      "
-                    >
-                      <span
-                        ><a href="underarm-sugaring\index.htm"
-                          >Подмышки Sugaring</a
-                        ></span
-                      >
-                    </li>
-                    <li
-                      id="menu-item-4966"
-                      class="
-                        menu-item menu-item-type-custom menu-item-object-custom
-                      "
-                    >
-                      <span
-                        ><a href="yumi-lashes-nyc\index.htm"
-                          >Подтяжка ресниц</a
-                        ></span
-                      >
-                    </li>
-                    <li
-                      id="menu-item-7156"
-                      class="
-                        menu-item menu-item-type-custom menu-item-object-custom
-                      "
-                    >
-                      <span
-                        ><a href="brow-lamination-nyc\index.htm"
-                          >Ламинирование бровей</a
-                        ></span
-                      >
-                    </li>
-                  </ul>
-                </li>
-                <li
-                  id="menu-item-3989"
-                  class="
-                    menu-item menu-item-type-custom menu-item-object-custom
-                  "
-                >
+                <li id="menu-item-3989" class="menu-item menu-item-type-custom menu-item-object-custom">
                   <span><a href="locations\index.htm">Локации</a></span>
                 </li>
-                <li
-                  id="menu-item-5833"
-                  class="
-                    menu-item menu-item-type-custom menu-item-object-custom
-                  "
-                >
-                  <span
-                    ><a
-                      href="https://sugaring.zenoti.com/webstoreNew/giftcards/678fd927-aff1-4183-8850-bc3d6e2c509f"
-                      >Подарок Карты</a
-                    ></span
-                  >
+                <li id="menu-item-5833" class="menu-item menu-item-type-custom menu-item-object-custom">
+                  <span><a
+                      href="https://sugaring.zenoti.com/webstoreNew/giftcards/678fd927-aff1-4183-8850-bc3d6e2c509f">Подарок
+                      Карты</a></span>
                 </li>
-                <li
-                  id="menu-item-4128"
-                  class="
-                    menu-item
-                    menu-item-type-custom
-                    menu-item-object-custom
-                    menu-item-has-children
-                  "
-                >
+                <li id="menu-item-4128"
+                  class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children">
                   <span><a>Цены</a></span>
                   <ul class="sub-menu">
-                    <li
-                      id="menu-item-5494"
-                      class="
-                        menu-item menu-item-type-custom menu-item-object-custom
-                      "
-                    >
-                      <span
-                        ><a href="prices\index.htm">Цены для женщин</a></span
-                      >
-                    </li>
-                    <li
-                      id="menu-item-5495"
-                      class="
-                        menu-item menu-item-type-custom menu-item-object-custom
-                      "
-                    >
-                      <span
-                        ><a href="male-sugaring-prices\index.htm"
-                          >Цены для мужчин</a
-                        ></span
-                      >
-                    </li>
-                    <li
-                      id="menu-item-5496"
-                      class="
-                        menu-item menu-item-type-custom menu-item-object-custom
-                      "
-                    >
-                      <span
-                        ><a href="yearly-unlimited-packages\index.htm"
-                          >Неограниченные пакеты</a
-                        ></span
-                      >
+                    <li id="menu-item-5494"
+                      class="menu-item menu-item-type-custom menu-item-object-custom"><span><a
+                          href="prices\index.htm">Цены для женщин</a></span></li>
+                    <li id="menu-item-5495"
+                      class="menu-item menu-item-type-custom menu-item-object-custom"><span><a
+                          href="male-sugaring-prices\index.htm">Цены для мужчин</a></span></li>
+                    <li id="menu-item-5496"
+                      class="menu-item menu-item-type-custom menu-item-object-custom"><span><a
+                          href="yearly-unlimited-packages\index.htm">Неограниченные
+                          пакеты</a></span>
                     </li>
                   </ul>
                 </li>
-                <li
-                  id="menu-item-6598"
-                  class="
-                    menu-item
-                    menu-item-type-custom
-                    menu-item-object-custom
-                    menu-item-has-children
-                  "
-                >
+                <li id="menu-item-6598"
+                  class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children">
                   <span><a>О нас</a></span>
                   <ul class="sub-menu">
-                    <li
-                      id="menu-item-6596"
-                      class="
-                        menu-item
-                        menu-item-type-post_type
-                        menu-item-object-page
-                      "
-                    >
-                      <span
-                        ><a href="our-story\index.htm">Наша история</a></span
-                      >
-                    </li>
+                    <li id="menu-item-6596"
+                      class="menu-item menu-item-type-post_type menu-item-object-page"><span><a
+                          href="our-story\index.htm">Наша история</a></span></li>
                   </ul>
-                </li>
-                <li
-                  id="menu-item-4147"
-                  class="
-                    menu-item menu-item-type-custom menu-item-object-custom
-                  "
-                >
-                  <span
-                    ><a href="https://www.sugaringpaste.com"
-                      >Наши продукты</a
-                    ></span
-                  >
-                </li>
-                <li
-                  id="menu-item-3671"
-                  class="
-                    menu-item menu-item-type-custom menu-item-object-custom
-                  "
-                >
-                  <span
-                    ><a href="sugaring-vs-waxing\index.htm"
-                      >Шугаринг против депиляции воском</a
-                    ></span
-                  >
-                </li>
-                <li
-                  id="menu-item-4030"
-                  class="
-                    menu-item menu-item-type-custom menu-item-object-custom
-                  "
-                >
-                  <span
-                    ><a href="sugaring-nyc-information\index.htm"
-                      >Вопросы и ответы</a
-                    ></span
-                  >
-                </li>
-                <li
-                  id="menu-item-4127"
-                  class="
-                    menu-item menu-item-type-custom menu-item-object-custom
-                  "
-                >
-                  <span
-                    ><a href="https://www.mensugaring.com/"
-                      >Мужской шугаринг</a
-                    ></span
-                  >
-                </li>
-                <li
-                  id="menu-item-6904"
-                  class="
-                    menu-item menu-item-type-custom menu-item-object-custom
-                  "
-                >
-                  <span
-                    ><a href="https://www.sugaringjobs.com/"
-                      >Вакансии в Нью-Йорке</a
-                    ></span
-                  >
                 </li>
               </ul>
             </nav>
@@ -2479,7 +2254,7 @@ Remarketing tags may not be associated with personally identifiable information 
       <div class="preloader-content">
         <img
           class="preloader-custom-img"
-          src="wp-content\uploads\2020\09\loader.gif"
+          src="../wp-content\uploads\2020\09\loader.gif"
         />
       </div>
     </div>
