delete nav bar (ПодаКарты)

--- a/male-sugaring-prices/index.htm
+++ b/male-sugaring-prices/index.htm
@@ -744,11 +744,6 @@ Remarketing tags may not be associated with personally identifiable information 
 							<li id="menu-item-3989" class="menu-item menu-item-type-custom menu-item-object-custom">
 								<span><a href="locations\index.htm">Локации</a></span>
 							</li>
-							<li id="menu-item-5833" class="menu-item menu-item-type-custom menu-item-object-custom">
-								<span><a
-										href="https://sugaring.zenoti.com/webstoreNew/giftcards/678fd927-aff1-4183-8850-bc3d6e2c509f">Подарок
-										Карты</a></span>
-							</li>
 							<li id="menu-item-4128"
 								class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children">
 								<span><a>Цены</a></span>
@@ -955,10 +950,11 @@ Remarketing tags may not be associated with personally identifiable information 
 										<div class="wpb_text_column wpb_content_element ">
 											<div class="wpb_wrapper">
 												<h4 style="text-align: center"><span class="s1">Безлимитные пакеты есть
-													доступный. <span style="color: #ff0000"><a
+														доступный. <span style="color: #ff0000"><a
 																style="color: #ff0000"
 																href="..\yearly-unlimited-packages\index.htm"
-																target="_blank" rel="noopener noreferrer">кликните сюда</a>
+																target="_blank" rel="noopener noreferrer">кликните
+																сюда</a>
 														</span>Узнать больше.</span></h4>
 
 											</div>
@@ -997,20 +993,22 @@ Remarketing tags may not be associated with personally identifiable information 
 											Информация</a><br></span><a style="color: #ffffff;"
 										href="..\collaborations\index.htm">Сотрудничество</a></p>
 								<h3>&nbsp;</h3>
-								<h2><a style="color: #ffffff;" href="https://www.sugaringjobs.com"><strong>Шугаринг Нью-Йорк
-									Вакансии</strong><br></a></h2>
+								<h2><a style="color: #ffffff;" href="https://www.sugaringjobs.com"><strong>Шугаринг
+											Нью-Йорк
+											Вакансии</strong><br></a></h2>
 								<p><span style="color: #ffffff;">Авторские права &nbsp; &copy; 2021 Все права защищены.
-									Sugaring NYC и логотип Sugaring NYC являются зарегистрированными товарными знаками Sugaring USA.
-									ООО</span></p>
+										Sugaring NYC и логотип Sugaring NYC являются зарегистрированными товарными
+										знаками Sugaring USA.
+										ООО</span></p>
 							</div>
 						</div>
 						<div id="text-4" class="widget col-md-6 widget_text">
 							<h3 class="widget-title m-secondary-font">1-888-647-8427</h3>
 							<div class="textwidget">
 								<p><span style="font-size: 24px;"><span style="font-size: 25px;">Забронируйте онлайн или
-									Вызов</span></span></p>
+											Вызов</span></span></p>
 								<p><span style="font-size: 24px;"><span style="font-size: 20px;">Подпишитесь на нашу
-									YouTube<br>
+											YouTube<br>
 										</span></span><br>
 									<script src="https://apis.google.com/js/platform.js"></script>
 								</p>
