--- a/locations/index.htm
+++ b/locations/index.htm
@@ -740,10 +740,10 @@ Remarketing tags may not be associated with personally identifiable information 
 
 						<ul id="menu-header-items" class="main-menu menu-items clearfix">
 							<li id="menu-item-3668" class="menu-item menu-item-type-custom menu-item-object-custom">
-								<span><a href="index.htm">Главная</a></span>
+								<span><a href="../index.htm">Главная</a></span>
 							</li>
 							<li id="menu-item-3989" class="menu-item menu-item-type-custom menu-item-object-custom">
-								<span><a href="locations\index.htm">Локации</a></span>
+								<span><a href="index.htm">Локации</a></span>
 							</li>
 							<li id="menu-item-4128"
 								class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children">
@@ -1404,7 +1404,7 @@ Remarketing tags may not be associated with personally identifiable information 
 										</div>
 										<div class="vc_btn3-container vc_btn3-center"><a
 												class="vc_general vc_btn3 vc_btn3-size-lg vc_btn3-shape-round vc_btn3-style-3d vc_btn3-color-juicy-pink"
-												href="https://www.sugaringbooking.com/" title="" target="_blank">Все
+												href="../index.htm" title="" target="_blank">Все
 												Офисы Sugaring в Нью-Йорке</a></div>
 									</div>
 								</div>
