--- a/locations/index.htm
+++ b/locations/index.htm
@@ -751,13 +751,13 @@ Remarketing tags may not be associated with personally identifiable information 
 								<ul class="sub-menu">
 									<li id="menu-item-5494"
 										class="menu-item menu-item-type-custom menu-item-object-custom"><span><a
-												href="prices\index.htm">Цены для женщин</a></span></li>
+												href="../prices\index.htm">Цены для женщин</a></span></li>
 									<li id="menu-item-5495"
 										class="menu-item menu-item-type-custom menu-item-object-custom"><span><a
-												href="male-sugaring-prices\index.htm">Цены для мужчин</a></span></li>
+												href="../male-sugaring-prices\index.htm">Цены для мужчин</a></span></li>
 									<li id="menu-item-5496"
 										class="menu-item menu-item-type-custom menu-item-object-custom"><span><a
-												href="yearly-unlimited-packages\index.htm">Неограниченные
+												href="../yearly-unlimited-packages\index.htm">Неограниченные
 												пакеты</a></span>
 									</li>
 								</ul>
@@ -768,7 +768,7 @@ Remarketing tags may not be associated with personally identifiable information 
 								<ul class="sub-menu">
 									<li id="menu-item-6596"
 										class="menu-item menu-item-type-post_type menu-item-object-page"><span><a
-												href="our-story\index.htm">Наша история</a></span></li>
+												href="../our-story\index.htm">Наша история</a></span></li>
 								</ul>
 							</li>
 						</ul>
