--- a/male-sugaring-prices/index.htm
+++ b/male-sugaring-prices/index.htm
@@ -739,10 +739,10 @@ Remarketing tags may not be associated with personally identifiable information 
 
 						<ul id="menu-header-items" class="main-menu menu-items clearfix">
 							<li id="menu-item-3668" class="menu-item menu-item-type-custom menu-item-object-custom">
-								<span><a href="index.htm">Главная</a></span>
+								<span><a href="../index.htm">Главная</a></span>
 							</li>
 							<li id="menu-item-3989" class="menu-item menu-item-type-custom menu-item-object-custom">
-								<span><a href="locations\index.htm">Локации</a></span>
+								<span><a href="../locations\index.htm">Локации</a></span>
 							</li>
 							<li id="menu-item-4128"
 								class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children">
@@ -750,13 +750,13 @@ Remarketing tags may not be associated with personally identifiable information 
 								<ul class="sub-menu">
 									<li id="menu-item-5494"
 										class="menu-item menu-item-type-custom menu-item-object-custom"><span><a
-												href="prices\index.htm">Цены для женщин</a></span></li>
+												href="../prices\index.htm">Цены для женщин</a></span></li>
 									<li id="menu-item-5495"
 										class="menu-item menu-item-type-custom menu-item-object-custom"><span><a
 												href="male-sugaring-prices\index.htm">Цены для мужчин</a></span></li>
 									<li id="menu-item-5496"
 										class="menu-item menu-item-type-custom menu-item-object-custom"><span><a
-												href="yearly-unlimited-packages\index.htm">Неограниченные
+												href="../yearly-unlimited-packages\index.htm">Неограниченные
 												пакеты</a></span>
 									</li>
 								</ul>
@@ -767,7 +767,7 @@ Remarketing tags may not be associated with personally identifiable information 
 								<ul class="sub-menu">
 									<li id="menu-item-6596"
 										class="menu-item menu-item-type-post_type menu-item-object-page"><span><a
-												href="our-story\index.htm">Наша история</a></span></li>
+												href="../our-story\index.htm">Наша история</a></span></li>
 								</ul>
 							</li>
 						</ul>
