--- a/our-story/index.htm
+++ b/our-story/index.htm
@@ -895,21 +895,21 @@ Remarketing tags may not be associated with personally identifiable information 
 
             <ul id="menu-header-items" class="main-menu menu-items clearfix">
               <li id="menu-item-3668" class="menu-item menu-item-type-custom menu-item-object-custom">
-                <span><a href="index.htm">Главная</a></span>
+                <span><a href="../index.htm">Главная</a></span>
               </li>
               <li id="menu-item-3989" class="menu-item menu-item-type-custom menu-item-object-custom">
-                <span><a href="locations\index.htm">Локации</a></span>
+                <span><a href="../locations\index.htm">Локации</a></span>
               </li>
               <li id="menu-item-4128"
                 class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children">
                 <span><a>Цены</a></span>
                 <ul class="sub-menu">
                   <li id="menu-item-5494" class="menu-item menu-item-type-custom menu-item-object-custom"><span><a
-                        href="prices\index.htm">Цены для женщин</a></span></li>
+                        href="../prices\index.htm">Цены для женщин</a></span></li>
                   <li id="menu-item-5495" class="menu-item menu-item-type-custom menu-item-object-custom"><span><a
-                        href="male-sugaring-prices\index.htm">Цены для мужчин</a></span></li>
+                        href="../male-sugaring-prices\index.htm">Цены для мужчин</a></span></li>
                   <li id="menu-item-5496" class="menu-item menu-item-type-custom menu-item-object-custom"><span><a
-                        href="yearly-unlimited-packages\index.htm">Неограниченные
+                        href="../yearly-unlimited-packages\index.htm">Неограниченные
                         пакеты</a></span>
                   </li>
                 </ul>
