--- a/male-sugaring-prices/index.htm
+++ b/male-sugaring-prices/index.htm
@@ -1238,8 +1238,9 @@ Remarketing tags may not be associated with personally identifiable information 
 
 							<div class="edn-text-content-wrap">
 								<div class="edn_static_text">
-									<div class="edn-text-link">Sugaring NYC is now Franchising! Interested to open store
-										in your town?</div> <span class="edn-call-action-button">
+									<div class="edn-text-link">Sugaring NYC теперь действует по франчайзингу!
+										Заинтересованы в открытии магазина
+										в вашем городе?</div> <span class="edn-call-action-button">
 
 										<span class="edn-ca-custom">
 											<a class="edn-static-button" href="https://www.sugaringnycfranchise.com/"
