link home on click logo fixed

--- a/index.htm
+++ b/index.htm
@@ -1467,7 +1467,7 @@ Remarketing tags may not be associated with personally identifiable information 
 				</noscript>
 				<!-- HEADER BRANDING : begin -->
 				<div class="header-branding">
-					<a href="index.htm">
+					<a href="../index.htm">
 						<img src="wp-content\uploads\2017\03\sugaringNYC_logo.png" width="350"
 							alt="Sugaring NYC Hair Removal &#8211; New York Hair Removal Studio">
 					</a>
