added .htaccess deleted uri
delete .htm in folder locations

--- a/locations/index-1.htm
+++ b/locations/index-1.htm
@@ -715,7 +715,7 @@ Remarketing tags may not be associated with personally identifiable information 
 				</noscript>
 				<!-- HEADER BRANDING : begin -->
 				<div class="header-branding">
-					<a href="../index.htm">
+					<a href="../index">
 						<img src="../wp-content\uploads\2017\03\sugaringNYC_logo.png" width="350"
 							alt="Sugaring NYC Hair Removal &#8211; New York Hair Removal Studio">
 					</a>
@@ -740,7 +740,7 @@ Remarketing tags may not be associated with personally identifiable information 
 
 						<ul id="menu-header-items" class="main-menu menu-items clearfix">
 							<li id="menu-item-3668" class="menu-item menu-item-type-custom menu-item-object-custom">
-								<span><a href="index.htm">Главная</a></span>
+								<span><a href="index">Главная</a></span>
 							</li>
 							<li id="menu-item-3682"
 								class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children">
@@ -748,31 +748,31 @@ Remarketing tags may not be associated with personally identifiable information 
 								<ul class="sub-menu">
 									<li id="menu-item-3788"
 										class="menu-item menu-item-type-post_type menu-item-object-page"><span><a
-												href="brazilian-sugaring\index.htm">Бразильский шугаринг</a></span></li>
+												href="brazilian-sugaring\index">Бразильский шугаринг</a></span></li>
 									<li id="menu-item-3691"
 										class="menu-item menu-item-type-custom menu-item-object-custom"><span><a
-												href="body-sugaring\index.htm">Шугаринг тела</a></span></li>
+												href="body-sugaring\index">Шугаринг тела</a></span></li>
 									<li id="menu-item-3694"
 										class="menu-item menu-item-type-custom menu-item-object-custom"><span><a
-												href="face-sugaring\index.htm">Шугаринг лица</a></span></li>
+												href="face-sugaring\index">Шугаринг лица</a></span></li>
 									<li id="menu-item-7213"
 										class="menu-item menu-item-type-custom menu-item-object-custom"><span><a
-												href="bikini-facials-nyc\index.htm">V-Facials + дополнения</a></span>
+												href="bikini-facials-nyc\index">V-Facials + дополнения</a></span>
 									</li>
 									<li id="menu-item-6597"
 										class="menu-item menu-item-type-post_type menu-item-object-page"><span><a
-												href="underarm-sugaring\index.htm">Подмышки Sugaring</a></span></li>
+												href="underarm-sugaring\index">Подмышки Sugaring</a></span></li>
 									<li id="menu-item-4966"
 										class="menu-item menu-item-type-custom menu-item-object-custom"><span><a
-												href="yumi-lashes-nyc\index.htm">Подтяжка ресниц</a></span></li>
+												href="yumi-lashes-nyc\index">Подтяжка ресниц</a></span></li>
 									<li id="menu-item-7156"
 										class="menu-item menu-item-type-custom menu-item-object-custom"><span><a
-												href="brow-lamination-nyc\index.htm">Ламинирование бровей</a></span>
+												href="brow-lamination-nyc\index">Ламинирование бровей</a></span>
 									</li>
 								</ul>
 							</li>
 							<li id="menu-item-3989" class="menu-item menu-item-type-custom menu-item-object-custom">
-								<span><a href="locations\index.htm">Локации</a></span>
+								<span><a href="locations\index">Локации</a></span>
 							</li>
 							<li id="menu-item-4128"
 								class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children">
@@ -780,13 +780,13 @@ Remarketing tags may not be associated with personally identifiable information 
 								<ul class="sub-menu">
 									<li id="menu-item-5494"
 										class="menu-item menu-item-type-custom menu-item-object-custom"><span><a
-												href="prices\index.htm">Цены для женщин</a></span></li>
+												href="prices\index">Цены для женщин</a></span></li>
 									<li id="menu-item-5495"
 										class="menu-item menu-item-type-custom menu-item-object-custom"><span><a
-												href="male-sugaring-prices\index.htm">Цены для мужчин</a></span></li>
+												href="male-sugaring-prices\index">Цены для мужчин</a></span></li>
 									<li id="menu-item-5496"
 										class="menu-item menu-item-type-custom menu-item-object-custom"><span><a
-												href="yearly-unlimited-packages\index.htm">Неограниченные
+												href="yearly-unlimited-packages\index">Неограниченные
 												пакеты</a></span>
 									</li>
 								</ul>
@@ -797,17 +797,17 @@ Remarketing tags may not be associated with personally identifiable information 
 								<ul class="sub-menu">
 									<li id="menu-item-6596"
 										class="menu-item menu-item-type-post_type menu-item-object-page"><span><a
-												href="our-story\index.htm">Наша история</a></span></li>
+												href="our-story\index">Наша история</a></span></li>
 								</ul>
 							</li>
 							<li id="menu-item-4147" class="menu-item menu-item-type-custom menu-item-object-custom">
 								<span><a href="https://www.sugaringpaste.com">Наши продукты</a></span>
 							</li>
 							<li id="menu-item-3671" class="menu-item menu-item-type-custom menu-item-object-custom">
-								<span><a href="sugaring-vs-waxing\index.htm">Шугаринг против депиляции воском</a></span>
+								<span><a href="sugaring-vs-waxing\index">Шугаринг против депиляции воском</a></span>
 							</li>
 							<li id="menu-item-4030" class="menu-item menu-item-type-custom menu-item-object-custom">
-								<span><a href="sugaring-nyc-information\index.htm">Вопросы и ответы</a></span>
+								<span><a href="sugaring-nyc-information\index">Вопросы и ответы</a></span>
 							</li>
 							<li id="menu-item-4127" class="menu-item menu-item-type-custom menu-item-object-custom">
 								<span><a href="https://www.mensugaring.com/">Мужской шугаринг</a></span>
@@ -913,7 +913,7 @@ Remarketing tags may not be associated with personally identifiable information 
 					<h1 class="m-secondary-font">Офисы Sugaring в Нью-Йорке</h1>
 
 					<ul class="breadcrumbs">
-						<li><a href="..\index.htm">Главная</a></li>
+						<li><a href="..\index">Главная</a></li>
 						<li>Офисы Sugaring в Нью-Йорке</li>
 					</ul>
 
@@ -1314,7 +1314,7 @@ Remarketing tags may not be associated with personally identifiable information 
 														<div class="wpb_text_column wpb_content_element ">
 															<div class="wpb_wrapper">
 																<p><a
-																		href="..\sugaring-brooklyn-park-slope-sugaring-nyc-location\index.htm">Шугаринг
+																		href="..\sugaring-brooklyn-park-slope-sugaring-nyc-location\index">Шугаринг
 																		NYC Brooklyn Location </a> удобно
 																	расположен на 7-й авеню, всего в нескольких
 																	кварталах от отеля.
@@ -1701,13 +1701,13 @@ Remarketing tags may not be associated with personally identifiable information 
 							<h3 class="widget-title m-secondary-font">Информация о Sugaring NYC</h3>
 							<div class="textwidget">
 								<p><span style="color: #ffffff;"><a style="color: #ffffff;"
-											href="..\policy\index.htm">Условия обслуживания</a></span><br><span style="color: #ffffff;"> <a
-											style="color: #ffffff;" href="index-1.htm">Шугаринг
+											href="..\policy\index">Условия обслуживания</a></span><br><span style="color: #ffffff;"> <a
+											style="color: #ffffff;" href="index-1">Шугаринг
 											Локации</a></span><br><span style="color: #ffffff;"> <a
 											style="color: #ffffff;"
 											href="https://www.sugaringnycfranchise.com/">Франчайзинг
 											Информация</a><br></span><a style="color: #ffffff;"
-										href="..\collaborations\index.htm">Сотрудничество</a></p>
+										href="..\collaborations\index">Сотрудничество</a></p>
 								<h3>&nbsp;</h3>
 								<h2><a style="color: #ffffff;" href="https://www.sugaringjobs.com"><strong>Шугаринг Нью-Йорк
 									Вакансии </strong> <br> </a> </h2>
