--- a/locations/index.htm
+++ b/locations/index.htm
@@ -713,7 +713,7 @@ Remarketing tags may not be associated with personally identifiable information 
 				</noscript>
 				<!-- HEADER BRANDING : begin -->
 				<div class="header-branding">
-					<a href="../index.htm">
+					<a href="../index">
 						<img src="../wp-content\uploads\2017\03\sugaringNYC_logo.png" width="350"
 							alt="Sugaring NYC Hair Removal &#8211; New York Hair Removal Studio">
 					</a>
@@ -738,10 +738,10 @@ Remarketing tags may not be associated with personally identifiable information 
 
 						<ul id="menu-header-items" class="main-menu menu-items clearfix">
 							<li id="menu-item-3668" class="menu-item menu-item-type-custom menu-item-object-custom">
-								<span><a href="../index.htm">Главная</a></span>
+								<span><a href="../index">Главная</a></span>
 							</li>
 							<li id="menu-item-3989" class="menu-item menu-item-type-custom menu-item-object-custom">
-								<span><a href="index.htm">Локации</a></span>
+								<span><a href="index">Локации</a></span>
 							</li>
 							<li id="menu-item-4128"
 								class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children">
@@ -749,13 +749,13 @@ Remarketing tags may not be associated with personally identifiable information 
 								<ul class="sub-menu">
 									<li id="menu-item-5494"
 										class="menu-item menu-item-type-custom menu-item-object-custom"><span><a
-												href="../prices\index.htm">Цены для женщин</a></span></li>
+												href="../prices\index">Цены для женщин</a></span></li>
 									<li id="menu-item-5495"
 										class="menu-item menu-item-type-custom menu-item-object-custom"><span><a
-												href="../male-sugaring-prices\index.htm">Цены для мужчин</a></span></li>
+												href="../male-sugaring-prices\index">Цены для мужчин</a></span></li>
 									<li id="menu-item-5496"
 										class="menu-item menu-item-type-custom menu-item-object-custom"><span><a
-												href="../yearly-unlimited-packages\index.htm">Неограниченные
+												href="../yearly-unlimited-packages\index">Неограниченные
 												пакеты</a></span>
 									</li>
 								</ul>
@@ -766,7 +766,7 @@ Remarketing tags may not be associated with personally identifiable information 
 								<ul class="sub-menu">
 									<li id="menu-item-6596"
 										class="menu-item menu-item-type-post_type menu-item-object-page"><span><a
-												href="../our-story\index.htm">Наша история</a></span></li>
+												href="../our-story\index">Наша история</a></span></li>
 								</ul>
 							</li>
 						</ul>
@@ -867,7 +867,7 @@ Remarketing tags may not be associated with personally identifiable information 
 					<h1 class="m-secondary-font">Офисы Sugaring в Нью-Йорке</h1>
 
 					<ul class="breadcrumbs">
-						<li><a href="..\index.htm">Главная</a></li>
+						<li><a href="..\index">Главная</a></li>
 						<li>Офисы Sugaring в Нью-Йорке</li>
 					</ul>
 
@@ -1268,7 +1268,7 @@ Remarketing tags may not be associated with personally identifiable information 
 														<div class="wpb_text_column wpb_content_element ">
 															<div class="wpb_wrapper">
 																<p><a
-																		href="..\sugaring-brooklyn-park-slope-sugaring-nyc-location\index.htm">Шугаринг
+																		href="..\sugaring-brooklyn-park-slope-sugaring-nyc-location\index">Шугаринг
 																		NYC Brooklyn Location </a> удобно
 																	расположен на 7-й авеню, всего в нескольких
 																	кварталах от отеля.
@@ -1402,7 +1402,7 @@ Remarketing tags may not be associated with personally identifiable information 
 										</div>
 										<div class="vc_btn3-container vc_btn3-center"><a
 												class="vc_general vc_btn3 vc_btn3-size-lg vc_btn3-shape-round vc_btn3-style-3d vc_btn3-color-juicy-pink"
-												href="../index.htm" title="" target="_blank">Все
+												href="../index" title="" target="_blank">Все
 												Офисы Sugaring в Нью-Йорке</a></div>
 									</div>
 								</div>
@@ -1654,13 +1654,13 @@ Remarketing tags may not be associated with personally identifiable information 
 							<h3 class="widget-title m-secondary-font">Информация о Sugaring NYC</h3>
 							<div class="textwidget">
 								<p><span style="color: #ffffff;"><a style="color: #ffffff;"
-											href="..\policy\index.htm">Условия Услуга</a></span><br><span
-										style="color: #ffffff;"> <a style="color: #ffffff;" href="index-1.htm">Шугаринг
+											href="..\policy\index">Условия Услуга</a></span><br><span
+										style="color: #ffffff;"> <a style="color: #ffffff;" href="index-1">Шугаринг
 											Локации</a></span><br><span style="color: #ffffff;"> <a
 											style="color: #ffffff;"
 											href="https://www.sugaringnycfranchise.com/">Франчайзинг
 											Информация</a><br></span><a style="color: #ffffff;"
-										href="..\collaborations\index.htm">Сотрудничество</a></p>
+										href="..\collaborations\index">Сотрудничество</a></p>
 								<h3>&nbsp;</h3>
 								<h2><a style="color: #ffffff;" href="https://www.sugaringjobs.com"><strong>Шугаринг
 											Нью-Йорк
