--- a/our-story/index.htm
+++ b/our-story/index.htm
@@ -864,7 +864,7 @@ Remarketing tags may not be associated with personally identifiable information 
         </noscript>
         <!-- HEADER BRANDING : begin -->
         <div class="header-branding">
-          <a href="../index.htm">
+          <a href="../index">
             <img src="../wp-content\uploads\2017\03\sugaringNYC_logo.png" width="350"
               alt="Sugaring NYC Hair Removal &#8211; New York Hair Removal Studio" />
           </a>
@@ -891,21 +891,21 @@ Remarketing tags may not be associated with personally identifiable information 
 
             <ul id="menu-header-items" class="main-menu menu-items clearfix">
               <li id="menu-item-3668" class="menu-item menu-item-type-custom menu-item-object-custom">
-                <span><a href="../index.htm">Главная</a></span>
+                <span><a href="../index">Главная</a></span>
               </li>
               <li id="menu-item-3989" class="menu-item menu-item-type-custom menu-item-object-custom">
-                <span><a href="../locations\index.htm">Локации</a></span>
+                <span><a href="../locations\index">Локации</a></span>
               </li>
               <li id="menu-item-4128"
                 class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children">
                 <span><a>Цены</a></span>
                 <ul class="sub-menu">
                   <li id="menu-item-5494" class="menu-item menu-item-type-custom menu-item-object-custom"><span><a
-                        href="../prices\index.htm">Цены для женщин</a></span></li>
+                        href="../prices\index">Цены для женщин</a></span></li>
                   <li id="menu-item-5495" class="menu-item menu-item-type-custom menu-item-object-custom"><span><a
-                        href="../male-sugaring-prices\index.htm">Цены для мужчин</a></span></li>
+                        href="../male-sugaring-prices\index">Цены для мужчин</a></span></li>
                   <li id="menu-item-5496" class="menu-item menu-item-type-custom menu-item-object-custom"><span><a
-                        href="../yearly-unlimited-packages\index.htm">Неограниченные
+                        href="../yearly-unlimited-packages\index">Неограниченные
                         пакеты</a></span>
                   </li>
                 </ul>
@@ -915,7 +915,7 @@ Remarketing tags may not be associated with personally identifiable information 
                 <span><a>О нас</a></span>
                 <ul class="sub-menu">
                   <li id="menu-item-6596" class="menu-item menu-item-type-post_type menu-item-object-page"><span><a
-                        href="our-story\index.htm">Наша история</a></span></li>
+                        href="our-story\index">Наша история</a></span></li>
                 </ul>
               </li>
             </ul>
@@ -1007,7 +1007,7 @@ Remarketing tags may not be associated with personally identifiable information 
           <h1 class="m-secondary-font">Наша история</h1>
 
           <ul class="breadcrumbs">
-            <li><a href="..\index.htm">Главная</a></li>
+            <li><a href="..\index">Главная</a></li>
             <li>Наша история</li>
           </ul>
         </div>
@@ -1433,13 +1433,13 @@ Remarketing tags may not be associated with personally identifiable information 
               </h3>
               <div class="textwidget">
                 <p>
-                  <span style="color: #ffffff"><a style="color: #ffffff" href="..\policy\index.htm">Terms &amp;
+                  <span style="color: #ffffff"><a style="color: #ffffff" href="..\policy\index">Terms &amp;
                       Conditions of Service</a></span><br /><span style="color: #ffffff">
-                    <a style="color: #ffffff" href="..\locations\index-1.htm">Sugaring Locations</a></span><br /><span
+                    <a style="color: #ffffff" href="..\locations\index-1">Sugaring Locations</a></span><br /><span
                     style="color: #ffffff">
                     <a style="color: #ffffff" href="https://www.sugaringnycfranchise.com/">Franchising
                       Information</a><br /></span><a style="color: #ffffff"
-                    href="..\collaborations\index.htm">Collaborations</a>
+                    href="..\collaborations\index">Collaborations</a>
                 </p>
                 <h3>&nbsp;</h3>
                 <h2>
